--- a/local-api/package.json
+++ b/local-api/package.json
@@ -5,15 +5,24 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "dev": "nodemon index.ts",
     "test": "mocha"
   },
   "author": "Morgan Craft",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^17.0.42",
+    "@types/supertest": "^2.0.12",
+    "eslint": "^8.17.0",
     "mocha": "^8.4.0",
+    "nodemon": "^2.0.16",
     "supertest": "^6.1.3"
   }
 }
