--- a/local-api/package.json
+++ b/local-api/package.json
@@ -11,6 +11,7 @@
   "author": "Morgan Craft",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.27.2",
     "express": "^4.17.1",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
@@ -20,6 +21,8 @@
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.42",
     "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
     "eslint": "^8.17.0",
     "mocha": "^8.4.0",
     "nodemon": "^2.0.16",
