--- a/local-api/package.json
+++ b/local-api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.ts",
-    "test": "mocha"
+    "test": "mocha -r ts-node/register test/test.ts"
   },
   "author": "Morgan Craft",
   "license": "MIT",
