--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,14 +1,19 @@
 {
   "name": "front-end",
   "version": "0.1.0",
+  "proxy": "http://localhost:3050",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/node": "^17.0.42",
+    "@types/react": "^18.0.12",
+    "@types/react-dom": "^18.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "typescript": "^4.7.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
